Fixed overflow visual bug

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,7 +5,7 @@
 
 .titleBG
 {
-	@apply flex items-center justify-center w-screen h-52 bg-gradient-to-br from-gray-800 to-gray-800 via-gray-700 shadow-lg mb-8;
+	@apply flex items-center justify-center h-52 bg-gradient-to-br from-gray-800 to-gray-800 via-gray-700 shadow-lg mb-8 overflow-x-visible;
 }
 .patreon
 {
